src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> SIGMA
Rule 1     SIGMA -> xml RSS
Rule 2     RSS -> rss CHANNEL cerrarrss
Rule 3     CHANNEL -> channel ET_OBL ITEM_REC cerrarchannel
Rule 4     ET_OBL -> ET_TITLE ET_LINK ET_DESC ET_CATEGORY ET_COPYRIGHT ET_IMG
Rule 5     LAMBDA -> <empty>
Rule 6     ET_TITLE -> titulo CONT_TEXTO cerrartitulo
Rule 7     ET_LINK -> link CONT_LINK cerrarlink
Rule 8     ET_URL -> url CONT_LINK cerrarurl
Rule 9     ET_DESC -> description CONT_TEXTO cerrardescription
Rule 10    ET_CATEGORY -> category CONT_TEXTO cerrarcategory
Rule 11    ET_CATEGORY -> LAMBDA
Rule 12    ET_COPYRIGHT -> copyright CONT_TEXTO cerrarcopyright
Rule 13    ET_COPYRIGHT -> LAMBDA
Rule 14    CONT_TEXTO -> contenido_texto CONT_TEXTO
Rule 15    CONT_TEXTO -> contenido_texto
Rule 16    ET_IMG -> image CONT_IMG cerrarimage
Rule 17    ET_IMG -> LAMBDA
Rule 18    CONT_IMG -> ET_IMG_OBL ET_IMG_OP
Rule 19    CONT_IMG -> ET_IMG_OBL
Rule 20    ET_IMG_OBL -> ET_TITLE ET_LINK ET_URL
Rule 21    ET_IMG_OBL -> ET_TITLE ET_URL ET_LINK
Rule 22    ET_IMG_OBL -> ET_URL ET_TITLE ET_LINK
Rule 23    ET_IMG_OBL -> ET_URL ET_LINK ET_TITLE
Rule 24    ET_IMG_OBL -> ET_LINK ET_TITLE ET_URL
Rule 25    ET_IMG_OBL -> ET_LINK ET_URL ET_TITLE
Rule 26    ET_IMG_OP -> ET_HEIGHT ET_IMG_OP
Rule 27    ET_IMG_OP -> ET_WIDTH ET_IMG_OP
Rule 28    ET_IMG_OP -> ET_HEIGHT
Rule 29    ET_IMG_OP -> ET_WIDTH
Rule 30    ET_HEIGHT -> height digito cerrarheight
Rule 31    ET_HEIGHT -> height contenido_texto cerrarheight
Rule 32    ET_WIDTH -> width digito cerrarwidth
Rule 33    ET_WIDTH -> width contenido_texto cerrarwidth
Rule 34    CONT_LINK -> protocolo DOMINIO_GRAL FINAL_URL
Rule 35    CONT_LINK -> protocolo DOMINIO_GRAL
Rule 36    FINAL_URL -> slash RUTA numeral LOCALIZADOR
Rule 37    FINAL_URL -> slash RUTA
Rule 38    DOMINIO_GRAL -> DOMINIO dospuntos PUERTO
Rule 39    DOMINIO_GRAL -> DOMINIO
Rule 40    LOCALIZADOR -> contenido_texto
Rule 41    DOMINIO -> contenido_texto
Rule 42    RUTA -> contenido_texto
Rule 43    PUERTO -> digito
Rule 44    PUERTO -> contenido_texto
Rule 45    ITEM_REC -> ET_ITEM ITEM_REC
Rule 46    ITEM_REC -> ET_ITEM
Rule 47    ET_ITEM -> item ET_OBL_ITEM cerraritem
Rule 48    ET_OBL_ITEM -> ET_TITLE ET_DESC ET_LINK ET_CATEGORY
Rule 49    ET_OBL_ITEM -> ET_TITLE ET_DESC ET_CATEGORY ET_LINK
Rule 50    ET_OBL_ITEM -> ET_TITLE ET_CATEGORY ET_DESC ET_LINK
Rule 51    ET_OBL_ITEM -> ET_TITLE ET_CATEGORY ET_LINK ET_DESC
Rule 52    ET_OBL_ITEM -> ET_TITLE ET_LINK ET_CATEGORY ET_DESC
Rule 53    ET_OBL_ITEM -> ET_TITLE ET_LINK ET_DESC ET_CATEGORY
Rule 54    ET_OBL_ITEM -> ET_DESC ET_TITLE ET_LINK ET_CATEGORY
Rule 55    ET_OBL_ITEM -> ET_DESC ET_TITLE ET_CATEGORY ET_LINK
Rule 56    ET_OBL_ITEM -> ET_DESC ET_CATEGORY ET_TITLE ET_LINK
Rule 57    ET_OBL_ITEM -> ET_DESC ET_CATEGORY ET_LINK ET_TITLE
Rule 58    ET_OBL_ITEM -> ET_DESC ET_LINK ET_CATEGORY ET_TITLE
Rule 59    ET_OBL_ITEM -> ET_DESC ET_LINK ET_TITLE ET_CATEGORY
Rule 60    ET_OBL_ITEM -> ET_CATEGORY ET_DESC ET_TITLE ET_LINK
Rule 61    ET_OBL_ITEM -> ET_CATEGORY ET_TITLE ET_DESC ET_LINK
Rule 62    ET_OBL_ITEM -> ET_CATEGORY ET_DESC ET_LINK ET_TITLE
Rule 63    ET_OBL_ITEM -> ET_CATEGORY ET_LINK ET_TITLE ET_DESC
Rule 64    ET_OBL_ITEM -> ET_CATEGORY ET_LINK ET_DESC ET_TITLE
Rule 65    ET_OBL_ITEM -> ET_LINK ET_CATEGORY ET_TITLE ET_DESC
Rule 66    ET_OBL_ITEM -> ET_LINK ET_CATEGORY ET_DESC ET_TITLE
Rule 67    ET_OBL_ITEM -> ET_LINK ET_TITLE ET_DESC ET_CATEGORY
Rule 68    ET_OBL_ITEM -> ET_LINK ET_TITLE ET_CATEGORY ET_DESC
Rule 69    ET_OBL_ITEM -> ET_LINK ET_DESC ET_CATEGORY ET_TITLE
Rule 70    ET_OBL_ITEM -> ET_LINK ET_DESC ET_TITLE ET_CATEGORY

Terminals, with rules where they appear

category             : 10
cerrarcategory       : 10
cerrarchannel        : 3
cerrarcopyright      : 12
cerrardescription    : 9
cerrarheight         : 30 31
cerrarimage          : 16
cerraritem           : 47
cerrarlink           : 7
cerrarrss            : 2
cerrartitulo         : 6
cerrarurl            : 8
cerrarwidth          : 32 33
channel              : 3
contenido_texto      : 14 15 31 33 40 41 42 44
copyright            : 12
description          : 9
digito               : 30 32 43
dospuntos            : 38
error                : 
height               : 30 31
image                : 16
item                 : 47
link                 : 7
numeral              : 36
protocolo            : 34 35
rss                  : 2
slash                : 36 37
titulo               : 6
url                  : 8
width                : 32 33
xml                  : 1

Nonterminals, with rules where they appear

CHANNEL              : 2
CONT_IMG             : 16
CONT_LINK            : 7 8
CONT_TEXTO           : 6 9 10 12 14
DOMINIO              : 38 39
DOMINIO_GRAL         : 34 35
ET_CATEGORY          : 4 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
ET_COPYRIGHT         : 4
ET_DESC              : 4 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
ET_HEIGHT            : 26 28
ET_IMG               : 4
ET_IMG_OBL           : 18 19
ET_IMG_OP            : 18 26 27
ET_ITEM              : 45 46
ET_LINK              : 4 20 21 22 23 24 25 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
ET_OBL               : 3
ET_OBL_ITEM          : 47
ET_TITLE             : 4 20 21 22 23 24 25 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
ET_URL               : 20 21 22 23 24 25
ET_WIDTH             : 27 29
FINAL_URL            : 34
ITEM_REC             : 3 45
LAMBDA               : 11 13 17
LOCALIZADOR          : 36
PUERTO               : 38
RSS                  : 1
RUTA                 : 36 37
SIGMA                : 0

Parsing method: LALR

state 0

    (0) S' -> . SIGMA
    (1) SIGMA -> . xml RSS

    xml             shift and go to state 2

    SIGMA                          shift and go to state 1

state 1

    (0) S' -> SIGMA .



state 2

    (1) SIGMA -> xml . RSS
    (2) RSS -> . rss CHANNEL cerrarrss

    rss             shift and go to state 4

    RSS                            shift and go to state 3

state 3

    (1) SIGMA -> xml RSS .

    $end            reduce using rule 1 (SIGMA -> xml RSS .)


state 4

    (2) RSS -> rss . CHANNEL cerrarrss
    (3) CHANNEL -> . channel ET_OBL ITEM_REC cerrarchannel

    channel         shift and go to state 6

    CHANNEL                        shift and go to state 5

state 5

    (2) RSS -> rss CHANNEL . cerrarrss

    cerrarrss       shift and go to state 7


state 6

    (3) CHANNEL -> channel . ET_OBL ITEM_REC cerrarchannel
    (4) ET_OBL -> . ET_TITLE ET_LINK ET_DESC ET_CATEGORY ET_COPYRIGHT ET_IMG
    (6) ET_TITLE -> . titulo CONT_TEXTO cerrartitulo

    titulo          shift and go to state 10

    ET_OBL                         shift and go to state 8
    ET_TITLE                       shift and go to state 9

state 7

    (2) RSS -> rss CHANNEL cerrarrss .

    $end            reduce using rule 2 (RSS -> rss CHANNEL cerrarrss .)


state 8

    (3) CHANNEL -> channel ET_OBL . ITEM_REC cerrarchannel
    (45) ITEM_REC -> . ET_ITEM ITEM_REC
    (46) ITEM_REC -> . ET_ITEM
    (47) ET_ITEM -> . item ET_OBL_ITEM cerraritem

    item            shift and go to state 13

    ITEM_REC                       shift and go to state 11
    ET_ITEM                        shift and go to state 12

state 9

    (4) ET_OBL -> ET_TITLE . ET_LINK ET_DESC ET_CATEGORY ET_COPYRIGHT ET_IMG
    (7) ET_LINK -> . link CONT_LINK cerrarlink

    link            shift and go to state 15

    ET_LINK                        shift and go to state 14

state 10

    (6) ET_TITLE -> titulo . CONT_TEXTO cerrartitulo
    (14) CONT_TEXTO -> . contenido_texto CONT_TEXTO
    (15) CONT_TEXTO -> . contenido_texto

    contenido_texto shift and go to state 17

    CONT_TEXTO                     shift and go to state 16

state 11

    (3) CHANNEL -> channel ET_OBL ITEM_REC . cerrarchannel

    cerrarchannel   shift and go to state 18


state 12

    (45) ITEM_REC -> ET_ITEM . ITEM_REC
    (46) ITEM_REC -> ET_ITEM .
    (45) ITEM_REC -> . ET_ITEM ITEM_REC
    (46) ITEM_REC -> . ET_ITEM
    (47) ET_ITEM -> . item ET_OBL_ITEM cerraritem

    cerrarchannel   reduce using rule 46 (ITEM_REC -> ET_ITEM .)
    item            shift and go to state 13

    ET_ITEM                        shift and go to state 12
    ITEM_REC                       shift and go to state 19

state 13

    (47) ET_ITEM -> item . ET_OBL_ITEM cerraritem
    (48) ET_OBL_ITEM -> . ET_TITLE ET_DESC ET_LINK ET_CATEGORY
    (49) ET_OBL_ITEM -> . ET_TITLE ET_DESC ET_CATEGORY ET_LINK
    (50) ET_OBL_ITEM -> . ET_TITLE ET_CATEGORY ET_DESC ET_LINK
    (51) ET_OBL_ITEM -> . ET_TITLE ET_CATEGORY ET_LINK ET_DESC
    (52) ET_OBL_ITEM -> . ET_TITLE ET_LINK ET_CATEGORY ET_DESC
    (53) ET_OBL_ITEM -> . ET_TITLE ET_LINK ET_DESC ET_CATEGORY
    (54) ET_OBL_ITEM -> . ET_DESC ET_TITLE ET_LINK ET_CATEGORY
    (55) ET_OBL_ITEM -> . ET_DESC ET_TITLE ET_CATEGORY ET_LINK
    (56) ET_OBL_ITEM -> . ET_DESC ET_CATEGORY ET_TITLE ET_LINK
    (57) ET_OBL_ITEM -> . ET_DESC ET_CATEGORY ET_LINK ET_TITLE
    (58) ET_OBL_ITEM -> . ET_DESC ET_LINK ET_CATEGORY ET_TITLE
    (59) ET_OBL_ITEM -> . ET_DESC ET_LINK ET_TITLE ET_CATEGORY
    (60) ET_OBL_ITEM -> . ET_CATEGORY ET_DESC ET_TITLE ET_LINK
    (61) ET_OBL_ITEM -> . ET_CATEGORY ET_TITLE ET_DESC ET_LINK
    (62) ET_OBL_ITEM -> . ET_CATEGORY ET_DESC ET_LINK ET_TITLE
    (63) ET_OBL_ITEM -> . ET_CATEGORY ET_LINK ET_TITLE ET_DESC
    (64) ET_OBL_ITEM -> . ET_CATEGORY ET_LINK ET_DESC ET_TITLE
    (65) ET_OBL_ITEM -> . ET_LINK ET_CATEGORY ET_TITLE ET_DESC
    (66) ET_OBL_ITEM -> . ET_LINK ET_CATEGORY ET_DESC ET_TITLE
    (67) ET_OBL_ITEM -> . ET_LINK ET_TITLE ET_DESC ET_CATEGORY
    (68) ET_OBL_ITEM -> . ET_LINK ET_TITLE ET_CATEGORY ET_DESC
    (69) ET_OBL_ITEM -> . ET_LINK ET_DESC ET_CATEGORY ET_TITLE
    (70) ET_OBL_ITEM -> . ET_LINK ET_DESC ET_TITLE ET_CATEGORY
    (6) ET_TITLE -> . titulo CONT_TEXTO cerrartitulo
    (9) ET_DESC -> . description CONT_TEXTO cerrardescription
    (10) ET_CATEGORY -> . category CONT_TEXTO cerrarcategory
    (11) ET_CATEGORY -> . LAMBDA
    (7) ET_LINK -> . link CONT_LINK cerrarlink
    (5) LAMBDA -> .

  ! shift/reduce conflict for description resolved as shift
  ! shift/reduce conflict for titulo resolved as shift
  ! shift/reduce conflict for link resolved as shift
    titulo          shift and go to state 10
    description     shift and go to state 25
    category        shift and go to state 26
    link            shift and go to state 15

  ! description     [ reduce using rule 5 (LAMBDA -> .) ]
  ! titulo          [ reduce using rule 5 (LAMBDA -> .) ]
  ! link            [ reduce using rule 5 (LAMBDA -> .) ]

    ET_OBL_ITEM                    shift and go to state 20
    ET_TITLE                       shift and go to state 21
    ET_DESC                        shift and go to state 22
    ET_LINK                        shift and go to state 23
    ET_CATEGORY                    shift and go to state 24
    LAMBDA                         shift and go to state 27

state 14

    (4) ET_OBL -> ET_TITLE ET_LINK . ET_DESC ET_CATEGORY ET_COPYRIGHT ET_IMG
    (9) ET_DESC -> . description CONT_TEXTO cerrardescription

    description     shift and go to state 25

    ET_DESC                        shift and go to state 28

state 15

    (7) ET_LINK -> link . CONT_LINK cerrarlink
    (34) CONT_LINK -> . protocolo DOMINIO_GRAL FINAL_URL
    (35) CONT_LINK -> . protocolo DOMINIO_GRAL

    protocolo       shift and go to state 30

    CONT_LINK                      shift and go to state 29

state 16

    (6) ET_TITLE -> titulo CONT_TEXTO . cerrartitulo

    cerrartitulo    shift and go to state 31


state 17

    (14) CONT_TEXTO -> contenido_texto . CONT_TEXTO
    (15) CONT_TEXTO -> contenido_texto .
    (14) CONT_TEXTO -> . contenido_texto CONT_TEXTO
    (15) CONT_TEXTO -> . contenido_texto

    cerrartitulo    reduce using rule 15 (CONT_TEXTO -> contenido_texto .)
    cerrardescription reduce using rule 15 (CONT_TEXTO -> contenido_texto .)
    cerrarcategory  reduce using rule 15 (CONT_TEXTO -> contenido_texto .)
    cerrarcopyright reduce using rule 15 (CONT_TEXTO -> contenido_texto .)
    contenido_texto shift and go to state 17

    CONT_TEXTO                     shift and go to state 32

state 18

    (3) CHANNEL -> channel ET_OBL ITEM_REC cerrarchannel .

    cerrarrss       reduce using rule 3 (CHANNEL -> channel ET_OBL ITEM_REC cerrarchannel .)


state 19

    (45) ITEM_REC -> ET_ITEM ITEM_REC .

    cerrarchannel   reduce using rule 45 (ITEM_REC -> ET_ITEM ITEM_REC .)


state 20

    (47) ET_ITEM -> item ET_OBL_ITEM . cerraritem

    cerraritem      shift and go to state 33


state 21

    (48) ET_OBL_ITEM -> ET_TITLE . ET_DESC ET_LINK ET_CATEGORY
    (49) ET_OBL_ITEM -> ET_TITLE . ET_DESC ET_CATEGORY ET_LINK
    (50) ET_OBL_ITEM -> ET_TITLE . ET_CATEGORY ET_DESC ET_LINK
    (51) ET_OBL_ITEM -> ET_TITLE . ET_CATEGORY ET_LINK ET_DESC
    (52) ET_OBL_ITEM -> ET_TITLE . ET_LINK ET_CATEGORY ET_DESC
    (53) ET_OBL_ITEM -> ET_TITLE . ET_LINK ET_DESC ET_CATEGORY
    (9) ET_DESC -> . description CONT_TEXTO cerrardescription
    (10) ET_CATEGORY -> . category CONT_TEXTO cerrarcategory
    (11) ET_CATEGORY -> . LAMBDA
    (7) ET_LINK -> . link CONT_LINK cerrarlink
    (5) LAMBDA -> .

  ! shift/reduce conflict for description resolved as shift
  ! shift/reduce conflict for link resolved as shift
    description     shift and go to state 25
    category        shift and go to state 26
    link            shift and go to state 15

  ! description     [ reduce using rule 5 (LAMBDA -> .) ]
  ! link            [ reduce using rule 5 (LAMBDA -> .) ]

    ET_DESC                        shift and go to state 34
    ET_LINK                        shift and go to state 35
    ET_CATEGORY                    shift and go to state 36
    LAMBDA                         shift and go to state 27

state 22

    (54) ET_OBL_ITEM -> ET_DESC . ET_TITLE ET_LINK ET_CATEGORY
    (55) ET_OBL_ITEM -> ET_DESC . ET_TITLE ET_CATEGORY ET_LINK
    (56) ET_OBL_ITEM -> ET_DESC . ET_CATEGORY ET_TITLE ET_LINK
    (57) ET_OBL_ITEM -> ET_DESC . ET_CATEGORY ET_LINK ET_TITLE
    (58) ET_OBL_ITEM -> ET_DESC . ET_LINK ET_CATEGORY ET_TITLE
    (59) ET_OBL_ITEM -> ET_DESC . ET_LINK ET_TITLE ET_CATEGORY
    (6) ET_TITLE -> . titulo CONT_TEXTO cerrartitulo
    (10) ET_CATEGORY -> . category CONT_TEXTO cerrarcategory
    (11) ET_CATEGORY -> . LAMBDA
    (7) ET_LINK -> . link CONT_LINK cerrarlink
    (5) LAMBDA -> .

  ! shift/reduce conflict for titulo resolved as shift
  ! shift/reduce conflict for link resolved as shift
    titulo          shift and go to state 10
    category        shift and go to state 26
    link            shift and go to state 15

  ! titulo          [ reduce using rule 5 (LAMBDA -> .) ]
  ! link            [ reduce using rule 5 (LAMBDA -> .) ]

    ET_TITLE                       shift and go to state 37
    ET_LINK                        shift and go to state 38
    ET_CATEGORY                    shift and go to state 39
    LAMBDA                         shift and go to state 27

state 23

    (65) ET_OBL_ITEM -> ET_LINK . ET_CATEGORY ET_TITLE ET_DESC
    (66) ET_OBL_ITEM -> ET_LINK . ET_CATEGORY ET_DESC ET_TITLE
    (67) ET_OBL_ITEM -> ET_LINK . ET_TITLE ET_DESC ET_CATEGORY
    (68) ET_OBL_ITEM -> ET_LINK . ET_TITLE ET_CATEGORY ET_DESC
    (69) ET_OBL_ITEM -> ET_LINK . ET_DESC ET_CATEGORY ET_TITLE
    (70) ET_OBL_ITEM -> ET_LINK . ET_DESC ET_TITLE ET_CATEGORY
    (10) ET_CATEGORY -> . category CONT_TEXTO cerrarcategory
    (11) ET_CATEGORY -> . LAMBDA
    (6) ET_TITLE -> . titulo CONT_TEXTO cerrartitulo
    (9) ET_DESC -> . description CONT_TEXTO cerrardescription
    (5) LAMBDA -> .

  ! shift/reduce conflict for titulo resolved as shift
  ! shift/reduce conflict for description resolved as shift
    category        shift and go to state 26
    titulo          shift and go to state 10
    description     shift and go to state 25

  ! titulo          [ reduce using rule 5 (LAMBDA -> .) ]
  ! description     [ reduce using rule 5 (LAMBDA -> .) ]

    ET_CATEGORY                    shift and go to state 40
    ET_TITLE                       shift and go to state 41
    ET_DESC                        shift and go to state 42
    LAMBDA                         shift and go to state 27

state 24

    (60) ET_OBL_ITEM -> ET_CATEGORY . ET_DESC ET_TITLE ET_LINK
    (61) ET_OBL_ITEM -> ET_CATEGORY . ET_TITLE ET_DESC ET_LINK
    (62) ET_OBL_ITEM -> ET_CATEGORY . ET_DESC ET_LINK ET_TITLE
    (63) ET_OBL_ITEM -> ET_CATEGORY . ET_LINK ET_TITLE ET_DESC
    (64) ET_OBL_ITEM -> ET_CATEGORY . ET_LINK ET_DESC ET_TITLE
    (9) ET_DESC -> . description CONT_TEXTO cerrardescription
    (6) ET_TITLE -> . titulo CONT_TEXTO cerrartitulo
    (7) ET_LINK -> . link CONT_LINK cerrarlink

    description     shift and go to state 25
    titulo          shift and go to state 10
    link            shift and go to state 15

    ET_DESC                        shift and go to state 43
    ET_TITLE                       shift and go to state 44
    ET_LINK                        shift and go to state 45

state 25

    (9) ET_DESC -> description . CONT_TEXTO cerrardescription
    (14) CONT_TEXTO -> . contenido_texto CONT_TEXTO
    (15) CONT_TEXTO -> . contenido_texto

    contenido_texto shift and go to state 17

    CONT_TEXTO                     shift and go to state 46

state 26

    (10) ET_CATEGORY -> category . CONT_TEXTO cerrarcategory
    (14) CONT_TEXTO -> . contenido_texto CONT_TEXTO
    (15) CONT_TEXTO -> . contenido_texto

    contenido_texto shift and go to state 17

    CONT_TEXTO                     shift and go to state 47

state 27

    (11) ET_CATEGORY -> LAMBDA .

    description     reduce using rule 11 (ET_CATEGORY -> LAMBDA .)
    titulo          reduce using rule 11 (ET_CATEGORY -> LAMBDA .)
    link            reduce using rule 11 (ET_CATEGORY -> LAMBDA .)
    copyright       reduce using rule 11 (ET_CATEGORY -> LAMBDA .)
    image           reduce using rule 11 (ET_CATEGORY -> LAMBDA .)
    item            reduce using rule 11 (ET_CATEGORY -> LAMBDA .)
    cerraritem      reduce using rule 11 (ET_CATEGORY -> LAMBDA .)


state 28
